--- a/main.html
+++ b/main.html
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-This is a resetted commit
-=======
-This is a altered commit
->>>>>>> 5af56c97cf6f31fc6c4e9f556fe2a57c8f5c5533
+new content
